feat(devex,edge): Maven publish, zero-config Gradle plugin, ASM relocation, classpath-aware analyze, PAL
Resolve the DevEx bottlenecks surfaced by porting real mods, and add the
Platform Abstraction Layer ("Edge").

- Maven publishing: core/bytecode/native/edge/network/gfx apply maven-publish
 and publishToMavenLocal so mods resolve org.aetherium:<m>:1.0.0-SNAPSHOT by
 coordinate instead of vendoring a jar.
- aetherium-gradle-plugin: zero-config `aetherium { version = "…" }` wires the
 Java 21 + --enable-preview toolchain, repos, framework deps, and an
 aetheriumBundle (JarJar-style) task. Plugin module excluded from preview.
- ASM namespace relocation: bytecode.relocate.{Relocation,ClassRelocator}
 (descriptor-aware ClassRemapper); DependencyFlattener.commonLibraryRelocations.
- analyze --classpath: URLClassLoader threaded into BytecodeAnalyzer so the
 verifier resolves vanilla net.minecraft types (eliminates false positives).
- aetherium-edge PAL: abstract EntityHandle/EntityAccess/EdgeEvents/
 PlatformBridge + Platform.bridge (ServiceLoader, no-op fallback). Loader
 provides NeoForge impl (NeoForgePlatformBridge/EntityHandle/Events via
 META-INF/services) — only place touching Minecraft types.
- examples/loomthreader-demo consumes the framework purely via Gradle.
- Bilingual docs (gradle-plugin, edge-pal, network, gfx); docs index + README
 module tables + CHANGELOG updated.

Verified: full compile green; relocation rewrites com.google.common →
org.aetherium.shadow.guava with no leftovers; analyze flags a supertype-merge
class without --classpath and reports CLEAN with it; publishToMavenLocal +
example bundle embeds 49 Aetherium classes.